sumo/tests/od2trips/errors/vmr/vmr_time_begin_larger/errors.od2trips
Error: Begin time is larger than end time.
Quitting (on error).
